<resources>
    <string name="app_name">Behavior Rolodex</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_profile_new">New Profile</string>
    <string name="notes">Additional Information</string>
    <string name="lname">Last Name</string>
    <string name="fname">First Name</string>
    <string name="title_activity_profile_view">ProfileView</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_new_note">New Note</string>
    <string name="note_new">Details</string>
    <string name="title">Subject</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="title_activity_behavior">Behaviors</string>
    <string name="behavior">Add New Behavior</string>
    <string name="title_activity_treatment">TreatmentActivity</string>
    <string name="title_activity_antecedent">AntecedentActivity</string>
</resources>
