<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ProfileNew"
    tools:showIn="@layout/activity_profile_new"
    android:paddingTop="55dp"
    >


    <ImageView
        android:id="@+id/view_image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:clickable="true"
        app:srcCompat="@drawable/profile_new_image"
        android:onClick="selectImage"/>



    <android.support.design.widget.TextInputLayout
        android:id="@+id/edit_fname_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/view_image"
        android:textColorHint="@color/inputText"
        android:layout_marginTop="16dp">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_fname"
            android:background="@drawable/apptheme_edit_text_holo_light"
            android:hint="@string/fname"
            android:textColorHint="@color/inputText"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:paddingBottom="5dp"
            android:paddingRight="4dp"
            android:paddingLeft="8dp"
            android:layout_alignParentTop="true"
            />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_lname_wrapper"
        android:textColorHint="@color/inputText"
        android:layout_marginTop="@dimen/margin_top_wrapper"
        android:layout_below="@+id/edit_fname_wrapper"
        android:textColor="@color/inputText">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_lname"
            android:hint="@string/lname"
            android:background="@drawable/apptheme_edit_text_holo_light"
            android:textColorHint="@color/inputText"
            android:inputType="textPersonName"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:paddingBottom="5dp"
            android:paddingRight="4dp"
            android:paddingLeft="8dp"
            android:layout_below="@+id/edit_fname"
            android:maxLines="1" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_note_wrapper"
        android:textColorHint="@color/inputText"
        android:layout_marginTop="@dimen/margin_top_wrapper"
        android:layout_below="@+id/edit_lname_wrapper">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/edit_note"
            android:hint="@string/notes"
            android:inputType="textMultiLine"
            android:background="@drawable/apptheme_edit_text_holo_light"
            android:layout_marginRight="15dp"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="15dp"
            android:paddingRight="4dp"
            android:paddingLeft="8dp"
            android:minLines="5"
            android:maxLines="5"
            android:scrollbars="vertical"
            android:gravity="top"
            android:layout_below="@+id/edit_lname"
            />
    </android.support.design.widget.TextInputLayout>

</RelativeLayout>